# django-qpay

./: README.md  pyproject.toml
django_qpay/: __init__.py  admin.py  apps.py  client.py  models.py  settings.py  signals.py  urls.py  views.py
django_qpay/migrations/: 0001_initial.py
django_qpay/templatetags/: qpay_tags.py
tests/: conftest.py  test_client.py  test_settings.py
